# perfetto-gpu-compute-injection

./: Cargo.toml  README.md  build.rs  stubs.cpp
.github/workflows/: ci.yml
cupti-profiler-sys/: stubs.cpp
cupti-profiler/src/: activity.rs  cuda.rs
docs/: AGENTS.md
perfetto-cuda-injection/: Cargo.toml  build.rs  stubs.cpp  wrapper.h
perfetto-cuda-injection/src/: callbacks.rs  lib.rs  metrics.rs  state.rs
perfetto-cuda-injection/src/cupti_profiler/: cuda.rs  macros.rs  mod.rs  profiler.rs  range_profiler.rs  subscriber.rs
perfetto-cuda-injection/src/cupti_profiler_sys/: dispatch.rs  mod.rs
perfetto-gpu-compute-injection/: Cargo.toml
perfetto-gpu-compute-injection/src/: config.rs  kernel.rs  lib.rs  trace_packet_defaults.rs  tracing.rs
perfetto-gpu-probes/: Cargo.toml  build.rs  stubs.cpp
perfetto-gpu-probes/src/: amd_poller.rs  amd_sysfs.rs  lib.rs  nvml.rs  nvml_poller.rs  poller.rs
perfetto-gpu-probes/src/protos/: mod.rs
perfetto-gpu-probes/src/protos/trace/: mod.rs  trace_packet.pz.rs
perfetto-gpu-probes/src/protos/trace/ftrace/: ftrace_event.pz.rs  ftrace_event_bundle.pz.rs  gpu_frequency.pz.rs  gpu_mem.pz.rs  mod.rs
perfetto-hip-injection/: Cargo.toml  build.rs  stubs.cpp  wrapper.h
perfetto-hip-injection/src/: callbacks.rs  lib.rs  metrics.rs  state.rs
perfetto-hip-injection/src/rocprofiler_sys/: bindings.rs  dispatch.rs  mod.rs
src/: callbacks.rs  config.rs  lib.rs  state.rs  tracing.rs
src/cupti_profiler/: activity.rs  cuda.rs  error.rs  macros.rs  metric_evaluator.rs  profiler.rs  range_profiler.rs
src/cupti_profiler_sys/: bindings.rs  mod.rs
