[package]
name = "perfetto-gpu-compute-injection"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
cpp_demangle = "0.5"
libc = "0.2"
once_cell = "1.18"
perfetto-sdk = "0.3"
perfetto-sdk-protos-gpu = "0.3"

[build-dependencies]
bindgen = "0.69"
cc = "1"

[features]
stubs = []
gen = []
