[package]
edition = "2021"
name = "perfetto-gpu-compute-injection"
version = "0.1.0"
build = "build.rs"
authors = ["David Reveman <reveman@meta.com>"]
description = "Perfetto GPU Compute Injection"
readme = "README.md"
keywords = [
    "tracing",
    "perfetto",
]
categories = ["development-tools::profiling"]
license = "Apache-2.0"
homepage = "https://www.perfetto.dev"
repository = "https://github.com/dreveman/perfetto-gpu-compute-injection"

[lib]
crate-type = ["cdylib"]

[dependencies]
cpp_demangle = "0.5"
libc = "0.2"
once_cell = "1.18"
perfetto-sdk = "0.3"
perfetto-sdk-protos-gpu = "0.3"

[build-dependencies]
bindgen = "0.69"
cc = "1"

[features]
stubs = []
gen = []
