[package]
name = "perfetto-cuda-injection"
version = "0.6.1"
edition = "2021"
build = "build.rs"
authors = ["David Reveman <reveman@meta.com>"]
description = "Perfetto GPU Compute Injection — NVIDIA/CUDA backend"
readme = "README.md"
keywords = [
    "tracing",
    "perfetto",
]
categories = ["development-tools::profiling"]
license = "Apache-2.0"
homepage = "https://www.perfetto.dev"
repository = "https://github.com/dreveman/perfetto-gpu-compute-injection"

[lib]
crate-type = ["cdylib"]

[features]
default = []
stubs = ["dep:cc"]
bindgen = ["dep:bindgen"]

[dependencies]
perfetto-gpu-compute-injection = { path = "../perfetto-gpu-compute-injection", version = "0.6.0" }
libc = "0.2"
once_cell = "1"
perfetto-sdk = "1"
perfetto-sdk-protos-gpu = "1"

[build-dependencies]
bindgen = { version = "0.72", optional = true }
cc = { version = "1", optional = true }
