[package]
name = "perfetto-gpu-compute-injection"
version = "0.5.0"
edition = "2021"
authors = ["David Reveman <reveman@meta.com>"]
description = "Perfetto GPU Compute Injection — shared library"
readme = "README.md"
keywords = [
    "tracing",
    "perfetto",
]
categories = ["development-tools::profiling"]
license = "Apache-2.0"
homepage = "https://www.perfetto.dev"
repository = "https://github.com/dreveman/perfetto-gpu-compute-injection"

[lib]
crate-type = ["rlib"]

[dependencies]
cpp_demangle = "0.5"
libc = "0.2"
once_cell = "1"
perfetto-sdk = "0.3"
perfetto-sdk-protos-gpu = "0.3.4"
