[package]
name = "perfetto-gpu-probes"
version = "0.5.1"
edition = "2021"
authors = ["David Reveman <reveman@meta.com>"]
description = "Perfetto GPU Probes — global GPU counter polling service"
readme = "README.md"
keywords = [
    "tracing",
    "perfetto",
]
categories = ["development-tools::profiling"]
license = "Apache-2.0"
homepage = "https://www.perfetto.dev"
repository = "https://github.com/dreveman/perfetto-gpu-compute-injection"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
default = []
stubs = ["dep:cc"]

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
paste = "1"
perfetto-sdk = "0.3"
perfetto-sdk-protos-gpu = "0.3.6"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = { version = "1", optional = true }
