[package]
name = "perfetto-hip-injection"
version = "0.4.5"
edition = "2021"
build = "build.rs"
authors = ["David Reveman <reveman@meta.com>"]
description = "Perfetto GPU Compute Injection — AMD/HIP backend"
readme = "README.md"
keywords = [
    "tracing",
    "perfetto",
]
categories = ["development-tools::profiling"]
license = "Apache-2.0"
homepage = "https://www.perfetto.dev"
repository = "https://github.com/dreveman/perfetto-gpu-compute-injection"

[lib]
crate-type = ["cdylib"]

[features]
default = []
stubs = ["dep:cc"]
bindgen = ["dep:bindgen"]

[dependencies]
perfetto-gpu-compute-injection = { path = "../perfetto-gpu-compute-injection", version = "0.4.1" }
libc = "0.2"
once_cell = "1"
perfetto-sdk = "0.3"
perfetto-sdk-protos-gpu = "0.3.1"

[build-dependencies]
bindgen = { version = "0.72", optional = true }
cc = { version = "1", optional = true }
